@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.6 =
 -------------------------------------------------
+* Fixed a problem with sale price in MarketPress.
 
 = 2.0.5 =
 -------------------------------------------------
